Fixed top menu jump when mobile keyboard is active

--- a/src/components/common/menu/mobile-top-menu.less
+++ b/src/components/common/menu/mobile-top-menu.less
@@ -7,6 +7,7 @@
   &:extend(.menu);
 
   z-index: @top-menu-z-index;
+  position: fixed;
   left: 0;
   top: 0;
 
@@ -14,8 +15,9 @@
     display: none;
   }
 
-  &.x-fixed {
-    position: fixed;
+  &.x-static {
+    margin-top: -1 * @menu-height;
+    position: static;
   }
 
   .top-navigation {
